Change str no type to VARCHAR(30). Load all tables to db

--- a/03_load/03_load.ipynb
+++ b/03_load/03_load.ipynb
@@ -43,11 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "['zip_code',\n",
-       " 'restaurant',\n",
-       " 'social_economics',\n",
-       " 'zip_zcta',\n",
-       " 'restaurant_address']"
+       "['zip_code', 'zip_zcta', 'census', 'restaurant', 'restaurant_address']"
       ]
      },
      "execution_count": 3,
@@ -68,9 +64,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ZCTA</th>\n",
+       "      <th>population</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>median_household_income</th>\n",
+       "      <th>per_capita_income</th>\n",
+       "      <th>poverty_count</th>\n",
+       "      <th>unemployment_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>17242.0</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>13092.0</td>\n",
+       "      <td>6999.0</td>\n",
+       "      <td>10772.0</td>\n",
+       "      <td>2316.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>38442.0</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>16358.0</td>\n",
+       "      <td>9277.0</td>\n",
+       "      <td>19611.0</td>\n",
+       "      <td>1927.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>48814.0</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>16603.0</td>\n",
+       "      <td>11307.0</td>\n",
+       "      <td>24337.0</td>\n",
+       "      <td>3124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00606</td>\n",
+       "      <td>6437.0</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>12832.0</td>\n",
+       "      <td>5943.0</td>\n",
+       "      <td>4163.0</td>\n",
+       "      <td>230.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00610</td>\n",
+       "      <td>27073.0</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>19309.0</td>\n",
+       "      <td>10220.0</td>\n",
+       "      <td>11724.0</td>\n",
+       "      <td>1290.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
+       "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
+       "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
+       "3  00606      6437.0        43.3                  12832.0             5943.0   \n",
+       "4  00610     27073.0        42.1                  19309.0            10220.0   \n",
+       "\n",
+       "   poverty_count  unemployment_count  \n",
+       "0        10772.0              2316.0  \n",
+       "1        19611.0              1927.0  \n",
+       "2        24337.0              3124.0  \n",
+       "3         4163.0               230.0  \n",
+       "4        11724.0              1290.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "census_df = pd.read_csv(\"../02_transform_census/clean_census.csv\", dtype={'ZCTA': 'str'})\n",
     "census_df.head()"
@@ -78,18 +180,269 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_df.to_sql(name='social_economics', con=engine, if_exists=\"append\", index=False)"
+    "census_df.to_sql(name='census', con=engine, if_exists=\"append\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>Adjuntas</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>Aguada</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>Aguadilla</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  zip_code        city state\n",
+       "0    00501  Holtsville    NY\n",
+       "1    00544  Holtsville    NY\n",
+       "2    00601    Adjuntas    PR\n",
+       "3    00602      Aguada    PR\n",
+       "4    00603   Aguadilla    PR"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/final_zip_code.csv\", dtype='str')\n",
+    "zip_code_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>ZCTA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>00601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>00602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>00603</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  zip_code   ZCTA\n",
+       "0    00501  11742\n",
+       "1    00544  11742\n",
+       "2    00601  00601\n",
+       "3    00602  00602\n",
+       "4    00603  00603"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')\n",
+    "zcta_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zcta_df.to_sql(name=\"zip_zcta\", con=engine, if_exists=\"append\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>restaurant_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Arby's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Wendy's</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_id restaurant_name\n",
+       "0              1  SONIC Drive In\n",
+       "1              2       Taco Bell\n",
+       "2              3          Arby's\n",
+       "3              4  Steak 'n Shake\n",
+       "4              5         Wendy's"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "restaurant_df = pd.read_csv(\"../02_transform_restaurant/restaurant_id.csv\")\n",
     "restaurant_df.head()"
@@ -97,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,23 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +538,7 @@
        "4              1      6557  S Staples St    78413"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,138 +550,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "restaurant_address_df.to_sql(name='restaurant_address', con=engine, if_exists=\"append\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_zcta_df = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zcta_df.to_sql(name=\"zcta\", con=engine, if_exists=\"append\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_code_df = pd.read_csv(\"../02_transform_restaurant/zip_code.csv\", dtype='str')\n",
-    "zip_code_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zcta_df = pd.read_csv(\"../02_transform_zip_zcta/zcta.csv\", dtype='str')\n",
-    "zcta_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_csv(\"../02_transform_zip_zcta\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
